--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="oturum_ac_b">Oturum Aç</string>
     <string name="username">Kullanıcı Adı</string>
     <string name="password">Şifre</string>
+    <string name="create_new_account_b">Yeni Hesap Oluştur</string>
+    <string name="email">Email</string>
 </resources>
